# TrustLang

./: README.md  TrustLang.opam  dune-project  trustlang.opam
lib/: ast.ml  dune  interpreter.ml  minicaml.ml  trustlang.ml  types.ml
test/: dune  test_MiniCaml.ml  test_TrustLang.ml
